# celluloid

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  README.md  autogen.sh  celluloid.doap  common.c  common.h  configure.ac  control_box.c  control_box.h  def.h  gnome-mpv.desktop  keybind.c  keybind.h  main.c  main_menu_bar.c  main_menu_bar.h  main_window.c  main_window.h  meson-post-install.py  meson.build  meson_check.sh  meson_post_install.py  mpv.c  mpv.h  open_loc_dialog.c  open_loc_dialog.h  playlist.c  playlist.h  playlist_widget.c  playlist_widget.h  pref_dialog.c  pref_dialog.h  zanata.xml
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml
.github/workflows/: mirror.yaml  test.yaml
RPM/: Gnome-MPV-0.2-21.fc21.x86_64.rpm
data/: Makefile.am  celluloid-marshal.lst  celluloid-mpris-gdbus.xml  gmpv_marshal.lst  gmpv_mpris_gdbus.xml  gnome-mpv.appdata.xml  gnome-mpv.appdata.xml.in  gnome-mpv.desktop  gnome-mpv.desktop.in  io.github.Celluloid.appdata.xml.in  io.github.Celluloid.desktop.in  io.github.Celluloid.gschema.xml  io.github.Celluloid.service.in  io.github.CelluloidPlayer.Celluloid.appdata.xml.in  io.github.CelluloidPlayer.Celluloid.desktop.in  io.github.CelluloidPlayer.Celluloid.gschema.xml  io.github.CelluloidPlayer.Celluloid.service.in  io.github.GnomeMpv.appdata.xml.in  io.github.GnomeMpv.desktop.in  io.github.GnomeMpv.gschema.xml  io.github.GnomeMpv.gschema.xml.in  io.github.GnomeMpv.service.in  io.github.celluloid-player.Celluloid.appdata.xml.in  io.github.celluloid-player.Celluloid.desktop.in  io.github.celluloid-player.Celluloid.service.in  io.github.celluloid_player.Celluloid.appdata.xml.in  io.github.celluloid_player.Celluloid.desktop.in  io.github.celluloid_player.Celluloid.gschema.xml  io.github.celluloid_player.Celluloid.service.in  marshal.lst  meson.build  mpris_gdbus.xml  org.gnome-mpv.gschema.xml  org.gnome-mpv.gschema.xml.in
docs/: Makefile.am  celluloid.1  gnome-mpv.1  meson.build
flatpak/: io.github.celluloid_player.Celluloid.json
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ar.po  bg.po  ca.po  celluloid.pot  cs.po  cs_CZ.po  da.po  de.po  de_DE.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_FR.po  ga.po  gnome-mpv.pot  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  kw.po  lt.po  lv.po  meson.build  messages.po  (+25 more)
src/: Makefile.am  actionctl.c  actionctl.h  application.c  application.h  celluloid-application.c  celluloid-application.h  celluloid-common.c  celluloid-common.h  celluloid-control-box.c  celluloid-control-box.h  celluloid-controller-actions.c  celluloid-controller-actions.h  celluloid-controller-input.c  celluloid-controller-input.h  celluloid-controller-private.h  celluloid-controller.c  celluloid-controller.h  celluloid-def.h  celluloid-file-chooser-button.c  celluloid-file-chooser-button.h  celluloid-file-chooser.c  celluloid-file-chooser.h  celluloid-file-dialog.c  celluloid-file-dialog.h  celluloid-file.c  celluloid-file.h  celluloid-header-bar.c  celluloid-header-bar.h  celluloid-main-window-private.h  celluloid-main-window.c  celluloid-main-window.h  celluloid-main.c  celluloid-menu.c  celluloid-menu.h  celluloid-metadata-cache.c  celluloid-metadata-cache.h  celluloid-model.c  celluloid-model.h  celluloid-mpv-private.h  (+165 more)
src/media-keys/: celluloid-media-keys.c  celluloid-media-keys.h
src/media_keys/: gmpv_media_keys.c  gmpv_media_keys.h  media_keys.c  media_keys.h
src/mpris/: celluloid-mpris-base.c  celluloid-mpris-base.h  celluloid-mpris-module.c  celluloid-mpris-module.h  celluloid-mpris-player.c  celluloid-mpris-player.h  celluloid-mpris-track-list.c  celluloid-mpris-track-list.h  celluloid-mpris.c  celluloid-mpris.h  gmpv_mpris.c  gmpv_mpris.h  gmpv_mpris_base.c  gmpv_mpris_base.h  gmpv_mpris_module.c  gmpv_mpris_module.h  gmpv_mpris_player.c  gmpv_mpris_player.h  gmpv_mpris_track_list.c  gmpv_mpris_track_list.h  mpris.c  mpris.h  mpris_base.c  mpris_base.h  mpris_player.c  mpris_player.h
test/: meson.build  test-option-parser.c  test-playlist-model.c
